# mindweaver

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HACKING.md  README.md  TODO.md  agent_skills.md  docker-compose.yml  llms.txt  nginx.conf  pyproject.toml  run-all-tests.sh  setup-dev.py  start-dev.py  start.sh
backend/: .dockerignore  .env.example  Containerfile  pyproject.toml  repo.yml
backend/migration/: env.py  script.py.mako
backend/migration/versions/: 014846ae7cfd_add_central_cert_issuer.py  0628a1b798f1_init.py  10ad4a7ad73b_added_ldap_config.py  14d4f5181f92_added_trino.py  20c4d8bacdc0_added_ranger_platform_service.py  285e72a8f941_split_datasource.py  29624155aa48_add_process_x_forwarded_for.py  2e310e02cef2_add_user_table.py  32d193b1654e_init.py  3496a75f52d4_delete.py  3a1ad31ffaa1_init.py  3a295d96d4ed_add_ranger_props.py  417aef98e648_refactor_k8s_cluster.py  425c42107165_add_project_status_tracking.py  56e6735ed20e_added_s3_to_hms.py  5a4c6491c5ba_add_ranger_state_passwords.py  653c40a290ee_added_internal_shared_secret_to_trino.py  69cc4df7f157_initialize.py  6ae2f807d50c_add_user_table.py  84c9b85b3cde_added_hms.py  872f647e1af6_add_cert_manager_and_cnpg_operator_.py  9248e0ac5f22_add_backup_schedule.py  95a12ecbc5a1_add_pgbouncer_fields_to_pgsql_platform.py  997ede4dadde_add_dictionary_fields_to_datasources.py  9fc0d0994d77_trino_multi_select_hms.py  a1b2c3d4e5f6_add_override_image_and_chart_version_to_hms.py  a1fd5c41265e_initial.py  a6d4435f371a_remove_keda.py  bbaba09ce176_trino_iceberg_hms.py  ce7e4912717b_init.py  (+12 more)
backend/spec/: PROJECT_CONSTITUTION.md
backend/tests/: conftest.py  test_ai_agent.py  test_auth.py  test_chat.py  test_crud.py  test_custom_views.py  test_data_source.py  test_data_source_connection.py  test_data_source_drivers.py  test_data_source_plugins.py  test_data_source_validation.py  test_delete_confirmation.py  test_error_handling.py  test_form_views.py  test_global_auth.py  test_hook_signature.py  test_ingestion.py  test_k8s_cluster.py  test_knowledge_db.py  test_lakehouse_storage.py  test_lakehouse_storage_connection.py  test_ontology.py  test_pgsql_backup_action.py  test_pgsql_resources.py  test_project.py  test_project_namespace.py  test_project_relationship_validation.py  test_s3_storage.py  test_s3_storage_connection.py  test_s3_storage_download.py  test_service_actions.py  test_service_hooks.py  test_service_states.py  test_uniqueness.py  test_verify_connection.py  test_widget_label.py  test_widget_metadata.py
releaser/: pyproject.toml
(+537 files in other folders)
