[project]
name = "mindweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Izhar Firdaus", email = "kagesenshi.87@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mindweaver = "mindweaver:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
